--- a/ann.html
+++ b/ann.html
@@ -7,95 +7,118 @@
     <script type="module" src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js"></script>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            background: #f4f4f4;
-        }
-        h1 {
-            text-align: center;
-        }
-        .container {
-            max-width: 600px;
-            margin: 20px auto;
-            padding: 20px;
-            background: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-        textarea {
-            width: 100%;
-            height: 100px;
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            resize: none;
-        }
-        button {
-            padding: 10px 20px;
-            background: #007BFF;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #0056b3;
-        }
-        .announcement {
-            margin-top: 20px;
-            padding: 10px;
-            background: #f9f9f9;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        .pinned {
-            background-color: #ffd700; /* Gold color for pinned announcements */
-            border: 1px solid #e5c100;
-        }
-        .edit-btn, .pin-btn, .delete-btn {
-            background-color: #28a745;
-            color: white;
-            padding: 5px;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-top: 5px;
-        }
-        .delete-btn {
-            background-color: #dc3545; /* Red color for delete */
-        }
-        .edit-btn:hover, .pin-btn:hover, .delete-btn:hover {
-            background-color: #218838;
-        }
-        .time {
-            font-size: 12px;
-            color: #888;
-            margin-top: 5px;
-            text-align: right;
-        }
-        /* Go back button styling */
-        .go-back-btn {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background: #28a745;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .go-back-btn:hover {
-            background: #218838;
-        }
+/* General Styling */
+body, h1, a {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Jost', sans-serif;
+  background: #000000; /* Space-like gradient */
+  color: #fff;
+  padding: 20px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 2.5rem;
+  color: white;
+  margin-bottom: 20px;
+  text-align: center;
+  font-weight: 600;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.container {
+  width: 100%;
+  max-width: 800px;
+  background: #333333; /* Dark gray for consistency */
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+textarea {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #888;
+  border-radius: 5px;
+  resize: none;
+  background: #444444; /* Dark gray background for textarea */
+  color: white;
+}
+
+button {
+  padding: 10px 20px;
+  background: #00FFFF; /* Mint blue background */
+  color: black;
+  border: none;
+  border-radius: 25px;
+  cursor: pointer;
+  font-size: 1rem;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+  transition: background 0.3s ease, box-shadow 0.3s ease;
+}
+
+button:hover {
+  background: #00B3B3; /* Slightly darker mint blue for hover effect */
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.announcement {
+  margin-top: 20px;
+  padding: 20px;
+  background: #333333; /* Dark background for announcements */
+  border: 1px solid #444444; /* Slightly lighter border */
+  border-radius: 8px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  color: white; /* White text color */
+  font-weight: 500;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
+  width: 100%;
+  max-width: 700px;
+  text-align: left;
+  word-wrap: break-word;
+  white-space: normal;
+  box-sizing: border-box;
+  position: relative;
+}
+
+.announcement:hover {
+  transform: scale(1.02);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
+.pinned {
+  background-color: #00FFFF; /* Mint blue for pinned */
+  color: black; /* Black text for pinned */
+  border: 1px solid #888888; /* Lighter border */
+}
+
+.time {
+  font-size: 12px;
+  color: #888;
+  margin-top: 5px;
+  text-align: right;
+}
+
     </style>
 </head>
 <body>
-    <h1>Live Announcements</h1>
-    
-    <!-- Go Back button -->
-    <button class="go-back-btn" onclick="goBack()">Go Back</button>
+    <h1>Make Announcements</h1>
     
     <div class="container">
         <textarea id="announcementInput" placeholder="Write your announcement..."></textarea>
@@ -170,7 +193,6 @@
                     div.innerHTML = `
                         <strong>${announcement.message}</strong>
                         <div class="time">${formattedTime}</div>
-                        <button class="edit-btn" onclick="editAnnouncement('${key}', '${announcement.message}')">Edit</button>
                         <button class="pin-btn" onclick="pinAnnouncement('${key}', ${announcement.pinned})">
                             ${announcement.pinned ? 'Unpin' : 'Pin'}
                         </button>
@@ -182,23 +204,6 @@
                 announcementsDiv.innerHTML = "<p>No announcements yet.</p>";
             }
         });
-
-        // Edit announcement
-        window.editAnnouncement = function(key, oldMessage) {
-            const newMessage = prompt("Edit announcement:", oldMessage);
-            if (newMessage !== null && newMessage !== oldMessage) {
-                update(ref(db, "announcements/" + key), {
-                    message: newMessage,
-                    time: new Date().toLocaleString() // Update timestamp
-                })
-                .then(() => {
-                    alert("Announcement updated!");
-                })
-                .catch((error) => {
-                    console.error("Error updating announcement:", error);
-                });
-            }
-        };
 
         // Pin or unpin announcement
         window.pinAnnouncement = function(key, isPinned) {
@@ -219,11 +224,6 @@
                     });
             }
         };
-
-        // Go back to main.html
-        function goBack() {
-            window.location.assign("main.html");
-        }
     </script>
 </body>
 </html>
