--- a/Dpp02.html
+++ b/Dpp02.html
@@ -664,7 +664,7 @@
         .then(() => {
           localStorage.clear();
           alert("Test submitted successfully!");
-          window.location.href = `result.html?username=${username}`;
+          window.location.href = `result02.html?username=${username}`;
         })
         .catch((error) => {
           alert("Error submitting test: " + error.message);
